[gd_scene load_steps=12 format=2]

[ext_resource path="res://RhythmGame/UI/TrackPlaying/UITrackPlaying.gd" type="Script" id=1]
[ext_resource path="res://RhythmGame/UI/TrackPlaying/UIScore.tscn" type="PackedScene" id=2]
[ext_resource path="res://RhythmGame/UI/TrackPlaying/UIMetronome.tscn" type="PackedScene" id=3]
[ext_resource path="res://RhythmGame/UI/TrackPlaying/Pause.gd" type="Script" id=4]
[ext_resource path="res://RhythmGame/UI/TrackPlaying/metronome_sprite.png" type="Texture" id=5]
[ext_resource path="res://RhythmGame/UI/TrackPlaying/190521.png" type="Texture" id=6]
[ext_resource path="res://RhythmGame/UI/Fonts/Montserrat-Bold.ttf" type="DynamicFontData" id=8]
[ext_resource path="res://RhythmGame/UI/TrackPlaying/Setting.gd" type="Script" id=9]
[ext_resource path="res://RhythmGame/UI/TrackPlaying/Volume.gd" type="Script" id=10]

[sub_resource type="DynamicFont" id=1]
size = 100
font_data = ExtResource( 8 )

[sub_resource type="DynamicFont" id=2]
size = 50
font_data = ExtResource( 8 )

[node name="UITrackPlaying" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Metronome" parent="." instance=ExtResource( 3 )]
position = Vector2( 96, 984 )
texture = ExtResource( 5 )

[node name="UIScore" parent="." instance=ExtResource( 2 )]
anchor_right = 1.0
margin_left = 0.0
margin_top = 0.0
margin_right = 0.0
margin_bottom = 111.0

[node name="PauseButton" type="TextureButton" parent="."]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -207.092
margin_top = -206.967
margin_right = 304.908
margin_bottom = 305.033
rect_scale = Vector2( 0.4, 0.4 )
texture_normal = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Pause_Layer" type="CanvasLayer" parent="."]
layer = 2

[node name="Pause" type="Control" parent="Pause_Layer"]
pause_mode = 2
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Background" type="ColorRect" parent="Pause_Layer/Pause"]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 0.364706 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Pause_Panel" type="Panel" parent="Pause_Layer/Pause/Background"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -780.0
margin_top = -432.0
margin_right = 754.0
margin_bottom = 457.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Pause_text" type="Label" parent="Pause_Layer/Pause/Background/Pause_Panel"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -160.0
margin_right = 160.0
margin_bottom = 123.0
custom_fonts/font = SubResource( 1 )
text = "Pause"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Resume" type="Button" parent="Pause_Layer/Pause/Background/Pause_Panel"]
anchor_right = 1.0
margin_top = 140.0
margin_bottom = 243.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Resume_text" type="Label" parent="Pause_Layer/Pause/Background/Pause_Panel/Resume"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -110.0
margin_top = -32.0
margin_right = 110.0
margin_bottom = 32.0
custom_fonts/font = SubResource( 2 )
text = "Resume"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LeaderBoard" type="Button" parent="Pause_Layer/Pause/Background/Pause_Panel"]
anchor_right = 1.0
margin_top = 733.0
margin_bottom = 842.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Leaderboard_text" type="Label" parent="Pause_Layer/Pause/Background/Pause_Panel/LeaderBoard"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -169.0
margin_top = -32.0
margin_right = 169.0
margin_bottom = 32.0
custom_fonts/font = SubResource( 2 )
text = "Leaderboard"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Quit" type="Button" parent="Pause_Layer/Pause/Background/Pause_Panel"]
anchor_top = -0.00701637
anchor_right = 1.0
anchor_bottom = -0.0317633
margin_top = 300.888
margin_bottom = 422.888
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": true
}

[node name="Quit_text" type="Label" parent="Pause_Layer/Pause/Background/Pause_Panel/Quit"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -56.5
margin_top = -31.0
margin_right = 56.5
margin_bottom = 31.0
custom_fonts/font = SubResource( 2 )
text = "Quit"
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}

[node name="Restart" type="Button" parent="Pause_Layer/Pause/Background/Pause_Panel"]
anchor_top = 0.160139
anchor_right = 1.0
anchor_bottom = 0.135393
margin_top = 300.888
margin_bottom = 422.888
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": true
}

[node name="Restart_text" type="Label" parent="Pause_Layer/Pause/Background/Pause_Panel/Restart"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -96.5
margin_top = -31.0
margin_right = 96.5
margin_bottom = 31.0
custom_fonts/font = SubResource( 2 )
text = "Restart"
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}

[node name="Setting" type="Button" parent="Pause_Layer/Pause/Background/Pause_Panel"]
anchor_top = 0.329938
anchor_right = 1.0
anchor_bottom = 0.305191
margin_top = 300.888
margin_bottom = 422.888
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": true
}

[node name="Setting_text" type="Label" parent="Pause_Layer/Pause/Background/Pause_Panel/Setting"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -96.5
margin_top = -31.0
margin_right = 96.5
margin_bottom = 31.0
custom_fonts/font = SubResource( 2 )
text = "Setting"
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}

[node name="Setting_Layer" type="CanvasLayer" parent="."]
layer = 3

[node name="Setting" type="Control" parent="Setting_Layer"]
pause_mode = 2
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 9 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Setting_Panel" type="Panel" parent="Setting_Layer/Setting"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -780.0
margin_top = -400.0
margin_right = 754.0
margin_bottom = 400.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Setting_text" type="Label" parent="Setting_Layer/Setting/Setting_Panel"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -192.0
margin_right = 192.0
margin_bottom = 123.0
custom_fonts/font = SubResource( 1 )
text = "Setting"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Volume" type="Button" parent="Setting_Layer/Setting/Setting_Panel"]
anchor_right = 1.0
margin_top = 139.849
margin_bottom = 261.849
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Volume_text" type="Label" parent="Setting_Layer/Setting/Setting_Panel/Volume"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -110.0
margin_top = -32.0
margin_right = 110.0
margin_bottom = 32.0
custom_fonts/font = SubResource( 2 )
text = "Volume"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Mute" type="Button" parent="Setting_Layer/Setting/Setting_Panel"]
anchor_right = 1.0
margin_top = 300.888
margin_bottom = 422.888
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": true
}

[node name="Mute_text" type="Label" parent="Setting_Layer/Setting/Setting_Panel/Mute"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -68.0
margin_top = -31.0
margin_right = 68.0
margin_bottom = 31.0
custom_fonts/font = SubResource( 2 )
text = "Mute"
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}

[node name="Back" type="Button" parent="Setting_Layer/Setting/Setting_Panel"]
anchor_top = 0.196001
anchor_right = 1.0
anchor_bottom = 0.196001
margin_top = 300.888
margin_bottom = 422.888
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": true
}

[node name="Back_text" type="Label" parent="Setting_Layer/Setting/Setting_Panel/Back"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -66.0
margin_top = -31.0
margin_right = 66.0
margin_bottom = 31.0
custom_fonts/font = SubResource( 2 )
text = "Back"
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}

[node name="Volume_Layer" type="CanvasLayer" parent="."]
layer = 4

[node name="Volume" type="Control" parent="Volume_Layer"]
pause_mode = 2
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 10 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Volume_Panel" type="Panel" parent="Volume_Layer/Volume"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -780.0
margin_top = -400.0
margin_right = 754.0
margin_bottom = 400.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Volume_text" type="Label" parent="Volume_Layer/Volume/Volume_Panel"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -204.0
margin_right = 204.0
margin_bottom = 123.0
custom_fonts/font = SubResource( 1 )
text = "Volume"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Back" type="Button" parent="Volume_Layer/Volume/Volume_Panel"]
anchor_top = 0.196001
anchor_right = 1.0
anchor_bottom = 0.196001
margin_top = 300.888
margin_bottom = 422.888
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": true
}

[node name="Back_text" type="Label" parent="Volume_Layer/Volume/Volume_Panel/Back"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -66.0
margin_top = -31.0
margin_right = 66.0
margin_bottom = 31.0
custom_fonts/font = SubResource( 2 )
text = "Back"
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}

[node name="Volume_ScrollBar" type="HScrollBar" parent="Volume_Layer/Volume/Volume_Panel"]
anchor_right = 1.0
margin_top = 165.0
margin_bottom = 354.0
min_value = -40.0
max_value = 20.0
step = 10.0
page = 10.0
value = -10.0
custom_step = 10.0
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="PauseButton" to="Pause_Layer/Pause" method="_on_PauseButton_pressed"]
[connection signal="pressed" from="Pause_Layer/Pause/Background/Pause_Panel/Resume" to="Pause_Layer/Pause" method="_on_Resume_pressed"]
[connection signal="pressed" from="Pause_Layer/Pause/Background/Pause_Panel/LeaderBoard" to="Pause_Layer/Pause" method="_on_LeaderBoard_pressed"]
[connection signal="pressed" from="Pause_Layer/Pause/Background/Pause_Panel/Quit" to="Pause_Layer/Pause" method="_on_Quite_pressed"]
[connection signal="pressed" from="Pause_Layer/Pause/Background/Pause_Panel/Restart" to="Pause_Layer/Pause" method="_on_Restart_pressed"]
[connection signal="pressed" from="Pause_Layer/Pause/Background/Pause_Panel/Setting" to="Setting_Layer/Setting" method="_on_Setting_pressed"]
[connection signal="pressed" from="Setting_Layer/Setting/Setting_Panel/Volume" to="Volume_Layer/Volume" method="_on_Volume_pressed"]
[connection signal="pressed" from="Setting_Layer/Setting/Setting_Panel/Mute" to="Setting_Layer/Setting" method="_on_Mute_pressed"]
[connection signal="pressed" from="Setting_Layer/Setting/Setting_Panel/Back" to="Setting_Layer/Setting" method="_on_Back_pressed"]
[connection signal="pressed" from="Volume_Layer/Volume/Volume_Panel/Back" to="Volume_Layer/Volume" method="_on_Back_pressed"]
[connection signal="value_changed" from="Volume_Layer/Volume/Volume_Panel/Volume_ScrollBar" to="Volume_Layer/Volume" method="_on_Volume_ScrollBar_value_changed"]
